app/assets/stylesheets/users.scss
// Place all the styles related to the Users controller here.
// They will automatically be included in application.css.
// You can use Sass (SCSS) here: http://sass-lang.com/

$profile-background: #D1DFD2;
$profile-border-radius: 5px;
$profile-border: 1px solid rgba(228, 229, 229, 1);
$division-background-color: #00964B;
$subheading-color: #969d9e;
$mini-profile-heading-color: #A3D6A7;

a.a-rating {
  text-decoration: none
}

a.a-rating:hover {
  text-decoration: none;
  cursor: default
}

a.rating-tasks {
  color: #323A3B;
}

body .profile-modal {
  position: relative;
  top: 50px;
  width: 750px;
}

body .profile-area {
  background-color: $profile-background;
  border-radius: $profile-border-radius;
  padding: 0px 0px 0px 0px;

  ::-webkit-scrollbar {
    width: 12px;
  }

  ::-webkit-scrollbar-track {
      -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3);
      border-radius: 10px;
  }

  ::-webkit-scrollbar-thumb {
      border-radius: 10px;
      -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.5);
  }


}

body .close-profile-button {
  background-color: $division-background-color;
  border-top-right-radius: $profile-border-radius;
  border-top-left-radius: $profile-border-radius;
}

button.close-profile-button {
  border: 0px transparent;
  margin: 6px 0px 0px 0px;
  padding: 0px 0px 0px 10px;
  font-size: 25px;
  line-height: 15px;
}

.comment-profile-pic {
  width: 100px;
  overflow: hidden;
}

.description-area {
  background-color: white;
  padding-bottom: 5px;
}

.profile-picture {
  border: 2px solid black;
}
.profile-modal .profile-border {
  background-color: $profile-background;
  margin-bottom: 0px;
  border-radius: 0px;
}

h2.profile-name {
  background-color: #00964B;
  color: white;
  margin-top: 0px;
  text-align: center;
  margin-bottom: 0px;
  border-top: 1px solid black;
  border-bottom: 1px solid black;
}

.profile-picture-container {
  width: 32.6%;
  display: inline-block;
  text-align: center;
  vertical-align: middle;
}


.profile-picture-container-top {
  padding-bottom: 20px;
}

.profile-body-area {
  display: inline-block;
}

.profile-body-description {
  float: left;
  width: 75%;

}

.profile-picture-container-bottom {
  padding-top: 20px;
  border-top: 1px solid gray;
}

.subheading {
  color: $subheading-color;
}

.comment-bottom {
  border-bottom-left-radius: 5px;
  border-bottom-right-radius: 5px;
  height: 10px;
  padding-left: 10px;
  padding-right: 10px;
}

div.profile-end-row {
  border-bottom-left-radius: 5px;
  border-bottom-right-radius: 5px;
}

div.comment-area {
  background-color: $profile-background;
  padding-top: 10px;

  img {
    width: 100px;
    overflow: hidden;
    border-radius: 5px;
  }

  .img-wrapper {
    height: 115px;
    overflow: hidden;
    border-radius: 5px;
  }
}

div.mini-profile {

  margin: 15px 15px 15px 15px;
  border: 1px solid black;
  border-radius: 5px;

  .thumbnail{
    img {
      max-height: 200px;
    }
  }

  .thumbnail {
    border: 0;
    margin-bottom: 0
  }

}

div.comment-area.last-comment-row {
  border-bottom-left-radius: 5px;
  border-bottom-right-radius: 5px;
  padding-bottom: 10px;
}

div.media .comment-region {
  overflow: scroll;
}

.tasker-mini-profiles {
  h2 {
    background-color: $mini-profile-heading-color;
    padding-top: 10px;
    padding-bottom: 10px;
  }

  h3 {
    text-align: center;
    margin-top: 0px;
  }
}

section.login-form {
  color: white;
  background-image: image-url('http://elliot-c-reed-taskforce.s3.amazonaws.com/splash_background.png');
  background-repeat: no-repeat;
  background-size: 100%;
  margin-top: 0px;
}

.tasker-mini-profiles {
  background-color: white;
  height: 100%;
  padding-bottom: 40px;

  .mini-profile-info {
    display: inline-block;
    width: 50%;
    text-align: center;
  }

  .mini-profile-info-right {
    float: right;
    border-left: 1px solid gray;
  }

  .mini-profile-info-left {
    float: left
  }

  .hire-button {
    width: 75%;
    margin-left: auto;
    margin-right: auto
  }

  button {
    width: 100%
  }



  a.tasker-profile {
    text-align: center
  }
}

.login-form  {
  .panel-primary {
    background: transparent;
    border: 0;

    .panel-heading {
      background: transparent;
      border: 0
    }
  }

  input {
    background-color: rgba(1, 1, 1, 0.5);
    color: white
  }

  .panel-title {
    background: transparent;
    border: 0
  }

  .btn {
    width: 100%;
    background-color: rgba(29, 136, 191, 0.5);
    -webkit-transition: background-color 0.2s;
    transition: background-color 0.2s;
  }

  .btn:hover {
    background-color: rgba(22, 192, 225, 0.5);
  }

  text-align: center;


  border: 0;

}

